bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "glog", version = "0.5.0")
bazel_dep(name = "abseil-cpp", version = "20240116.0")
bazel_dep(name = "google_benchmark", version = "1.9.2")
bazel_dep(name = "gflags", version = "2.2.2")
